# aperture

./: .gitmodules  Cargo.toml  README.md  cornell.json  cornell.pbrt  rustfmt.toml
maths/: Cargo.toml
maths/src/: bounds.rs  cmatrix.rs  lib.rs  macros.rs  matrix.rs  normal.rs  point.rs  ray.rs  transform.rs  vector.rs
pbr-cli/: Cargo.toml
pbr-cli/src/: main.rs
pbr-core/: Cargo.toml
pbr-core/src/: blockedarray.rs  bounds.rs  camera.rs  cie.rs  efloat.rs  film.rs  interaction.rs  interpolation.rs  lib.rs  main.rs  mipmap.rs  paramset.rs  primitive.rs  ray.rs  spectrum.rs  transform.rs  utils.rs
src/: blockedarray.rs  camera.rs  color.rs  efloat.rs  film.rs  filter.rs  interaction.rs  interpolation.rs  lib.rs  main.rs  material.rs  mc.rs  medium.rs  mipmap.rs  paramset.rs  partition.rs  primitive.rs  quaternion.rs  scene.rs  shapes.rs  spectrum.rs  texture.rs  transform.rs  utils.rs
src/bsdf/: bxdf.rs  fourier.rs  fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs
src/bvh/: mod.rs  node.rs
src/bxdf/: bsdf.rs  fresnel.rs  lambertian.rs  merl.rs  microfacet_transmission.rs  mod.rs  oren_nayar.rs  specular_reflection.rs  specular_transmission.rs  torrance_sparrow.rs
src/exec/: mod.rs  multithreaded.rs
src/film/: animated_color.rs  camera.rs  color.rs  image.rs  mod.rs  render_target.rs
src/filter/: mod.rs
src/geometry/: animated_mesh.rs  bbox.rs  bounds.rs  bvh.rs  differential_geometry.rs  disk.rs  emitter.rs  instance.rs  intersection.rs  matrix.rs  mesh.rs  mod.rs  normal.rs  point.rs  ray.rs  receiver.rs  rectangle.rs  sphere.rs  vector.rs
(+111 files in other folders)
