[package]
name = "aperture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# byteorder = "1.4.3"
# cgmath = "0.18.0"
color-eyre = "0.5.11"
env_logger = "0.9.0"
log = "0.4.14"
nom = "7.1.0"
num-traits = "0.2.14"
# pbr = "1.0.4"
# rayon = "1.5.1"
