[package]
name = "aperture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# byteorder = "1.4.3"
# cgmath = "0.18.0"
color-eyre = "0.5.11"
env_logger = "0.9.0"
log = "0.4.14"
# nom = "7.1.0"
# num-traits = "0.2.14"
# pbr = "1.0.4"
# rayon = "1.5.1"
enum-set = "0.0.7"
rand = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
docopt = "0.8.3"
image = "0.18.0"
num_cpus = "1.8"
tobj = "0.1.6"
byteorder = "1.2"
scoped_threadpool = "0.1.8"
bspline = "0.2.2"
bincode = "0.9"
mio = "0.5.1"
la = "0.2.0"
light_arena = "1.0.1"